--- a/wp-content/themes/sixgill/less/desktop_blog_page.less
+++ b/wp-content/themes/sixgill/less/desktop_blog_page.less
@@ -61,6 +61,7 @@
 		&-author-date {
 			margin-bottom: 19px;
 			font-size: 14px;
+			letter-spacing: 0.4px;
 		}
 
 		&-dash {
@@ -99,6 +100,7 @@
 			&-title {
 				font-size: 16px;
 				height: 35px;
+				letter-spacing: 1.1px;
 			}
 		}
 
@@ -150,6 +152,7 @@
 			&-title {
 				font-size: 16px;
 				height: 35px;
+				letter-spacing: 1.1px;
 			}
 		}
 
