--- a/wp-content/themes/sixgill/less/tablet_blog_page.less
+++ b/wp-content/themes/sixgill/less/tablet_blog_page.less
@@ -45,13 +45,13 @@
 
 		&-title {
 			font-size: 24px;
-  		letter-spacing: 0.7px;
+			letter-spacing: 0.7px;
 			margin-bottom: 12.5px;
 		}
 
 		&-author-date {
 			font-size: 14px;
-  		letter-spacing: 0.4px;
+			letter-spacing: 0.4px;
 			margin-bottom: 18.5px;
 		}
 
@@ -67,6 +67,14 @@
 				width: 100%;
 			}
 		}
+	}
+
+	&-subscription-block-title {
+		letter-spacing: 1.1px;
+	}
+
+	&-popular-block-title {
+		letter-spacing: 1.1px;
 	}
 
 	&-pagination {
